# Wayfile

./: .SRCINFO  .gitignore  BRAINSTORM.md  CLAUDE.md  CMakeLists.txt  PKGBUILD  README.md  heimdall.desktop  io.github.blackbartblues.Heimdall.yml  io.github.blackbartblues.Wayfile.yml
docs/superpowers/plans/: 2026-05-29-m1-cleanup-hardcoded-shortcuts.md  2026-05-29-m2-shortcut-registry-hardening.md  2026-05-29-m3-settings-parity.md  2026-05-29-m5-escape-chain-and-pane-focus.md  2026-06-07-gallery-view.md  2026-06-08-gallery-polish.md  2026-06-08-wayfile-1.0.0-w1-token-adoption.md  2026-06-09-wayfile-1.0.0-w2-theming.md  2026-06-09-wayfile-1.0.0-w3-icons.md  2026-06-09-wayfile-1.0.0-w4-tabs-merge.md  2026-06-09-wayfile-1.0.0-w5-logo.md  2026-06-09-wayfile-1.0.0-w6-typography.md  2026-06-09-wayfile-custom-theme-presets.md  2026-06-10-wayfile-w7-sidebar-rework.md  2026-06-10-wayfile-w8-handoff-fidelity.md  2026-06-13-wayfile-open-just-works.md  2026-06-13-wayfile-per-pane-view-and-folder-memory.md
docs/superpowers/specs/: 2026-04-03-high-value-features-design.md  2026-05-29-settings-shortcuts-polish-design.md  2026-06-07-gallery-view-design.md  2026-06-08-gallery-polish-design.md  2026-06-08-wayfile-1.0.0-visual-system-design.md  2026-06-09-wayfile-custom-theme-presets-design.md  2026-06-10-wayfile-w7-sidebar-rework-design.md  2026-06-13-wayfile-open-just-works-design.md  2026-06-13-wayfile-per-pane-view-and-folder-memory-design.md
scripts/: build-appimage-local.sh
src/: CMakeLists.txt  main.cpp
src/models/: bookmarkmodel.cpp  bookmarkmodel.h  devicemodel.cpp  devicemodel.h  devicemodel_enumerate.cpp  devicemodel_internal.h  devicemodel_mount.cpp  dirfilterproxymodel.cpp  dirfilterproxymodel.h  filesystemmodel.cpp  filesystemmodel.h  filesystemmodel_apps.cpp  filesystemmodel_helpers.cpp  filesystemmodel_helpers.h  filesystemmodel_properties.cpp  filesystemmodel_reload.cpp  foldertreemodel.cpp  foldertreemodel.h  folderviewstore.cpp  folderviewstore.h  networklocationmodel.cpp  networklocationmodel.h  panestate.h  searchproxymodel.cpp  tablistmodel.cpp  tablistmodel.h  tabmodel.cpp  tabmodel.h
src/providers/: iconprovider.h  thumbnailprovider.cpp
src/qml/: Main.qml  Roles.qml
src/qml/Quill/: Theme.qml  qmldir
src/qml/Quill/components/: Avatar.qml  Badge.qml  Button.qml  Card.qml  Checkbox.qml  Collapsible.qml  Dialog.qml  Dropdown.qml  Format.qml  Icon.qml  IconButton.qml  Label.qml  ProgressBar.qml  RadioButton.qml  RadioGroup.qml  ScrollableList.qml  Separator.qml  Slider.qml  Spinner.qml  Tabs.qml  TextField.qml  Toggle.qml  Tooltip.qml
src/qml/Quill/showcase/: FeedbackSection.qml
src/qml/components/: AnimatedInputDialog.qml  AppChooserDialog.qml  AppShortcuts.qml  Breadcrumb.qml  BulkRenameDialog.qml  ConfirmActionDialog.qml  ContextMenu.qml  ContextMenuRow.qml  ContextMenuSubmenuRow.qml  FileTabBar.qml  FilterPanel.qml  GalleryFolderNav.qml  HoverRect.qml  KeyboardShortcutsDialog.qml  MainOverlays.qml  MissingDependenciesDialog.qml  NavArrow.qml  OperationsBar.qml  PaneFrame.qml  PreviewState.qml  PropertiesDialog.qml  QuickPreview.qml  QuickPreviewPane.qml  RemoteConnectDialog.qml  RubberBand.qml  SearchBar.qml  SelectionController.qml  SettingDescription.qml  SettingsDropdown.qml  SettingsPanel.qml  SettingsSectionColors.qml  SettingsSectionLayout.qml  SettingsSectionLook.qml  SettingsSectionMotion.qml  SettingsSectionTools.qml  Sidebar.qml  SidebarCompactRail.qml  SidebarDeviceRow.qml  SidebarPane.qml  SidebarPlacesTree.qml  (+8 more)
src/qml/theme/: FileTypeColors.qml  Fonts.qml  GitColors.qml  Theme.qml
src/qml/views/: DropParse.js  EmptyState.qml  FileDetailedRow.qml  FileDetailedView.qml  FileGridView.qml  FileIcon.qml  FileMillerView.qml  FileTypeChip.qml  FileViewContainer.qml  GalleryView.qml  GitBadge.qml  HybridView.qml  KineticWheelScroller.qml  MillerCurrentRow.qml  MillerPreviewColumn.qml  OsFile.qml  OsFolder.qml  WayFile.qml  WayFolder.qml
src/services/: clipboardmanager.cpp  configmanager.cpp  configmanager.h  dependencychecker.cpp  dependencychecker.h  diskusageservice.cpp  fileoperations.cpp  fileoperations.h  fileoperations_archive.cpp  fileoperations_desktop.cpp  fileoperations_helpers.cpp  fileoperations_helpers.h  fileoperations_rename.cpp  fileoperations_transfer.cpp  fileoperations_trash.cpp  giotransferworker.cpp  giotransferworker_internal.h  giotransferworker_recursive.cpp  gitstatusservice.cpp  gitstatusservice.h  metadataextractor.cpp  metadataextractor.h  paneservices.cpp  paneservices.h  previewservice.cpp  previewservice.h  previewservice_binary.cpp  previewservice_internal.h  previewservice_text.cpp  runtimefeaturesservice.cpp  searchservice.cpp  themeloader.cpp  themeloader.h  undomanager.cpp
tests/: CMakeLists.txt  qml-smoke.sh  tst_bookmarkmodel.cpp  tst_configmanager.cpp  tst_configmanager_roundtrip.cpp  tst_devicemodel.cpp  tst_dirfilterproxymodel.cpp  tst_fileoperations.cpp  tst_filesystemmodel.cpp  tst_foldertreemodel.cpp  tst_folderviewstore.cpp  tst_giotransferworker.cpp  tst_gitstatusservice.cpp  tst_metadataextractor.cpp  tst_pdfpreviewprovider.cpp  tst_previewservice.cpp  tst_searchproxymodel.cpp  tst_tabmodel.cpp  tst_themeloader.cpp  tst_thumbnailprovider.cpp  tst_undomanager.cpp
themes/: aurora.toml  bifrost.toml  catppuccin-latte.toml  catppuccin-mocha.toml  ember.toml  nebula.toml  verdant.toml
themes/icons/Heimdall/: index.theme
themes/icons/Wayfile/: index.theme
